--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout Recommendation System</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <!-- Slide 1: Health Information -->
@@ -278,6 +278,6 @@
         </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="public/js/main.js"></script>
 </body>
 </html>
